--- a/style.css
+++ b/style.css
@@ -58,12 +58,12 @@ body {
   box-shadow: 0 0.1rem 1rem var(--shadow-color);
 }
 
-/* .logo {
+.logo {
   font-size: 2.5rem;
   color: var(--main-color);
   font-weight: 600;
   margin-right: auto;
-} */
+} 
 
 .navbar a {
   position: relative;
